// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Skeleton Button ⚠️ 1`] = `
<div
  aria-hidden={true}
  className="sc-hqyNC jfKKqE"
  width={139}
>
  _
</div>
`;

exports[`Storyshots Skeleton Rect 1`] = `
<div
  aria-hidden={true}
  className="sc-jbKcbu cvPAYm"
  height="600px"
  width="800px"
>
  _
</div>
`;

exports[`Storyshots Skeleton Text 1`] = `
Array [
  <div
    aria-hidden={true}
    className="sc-kvZOFW bGbpIk"
  >
    _
  </div>,
  <br />,
  <div
    aria-hidden={true}
    className="sc-kvZOFW bGbpIk"
  >
    _
  </div>,
  <br />,
  <div
    aria-hidden={true}
    className="sc-kvZOFW bGbpIk"
  >
    _
  </div>,
]
`;
